--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cra-template-typescript": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.14.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.0"
   },
@@ -46,6 +48,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34"
   }
 }
